Downgrade to java 8. -> 1.6.1